pr4/mycc.output
Nonterminals useless in grammar

   K
   P


Terminals unused in grammar

   PA
   NA
   TA
   DA
   MA
   AA
   XA
   OA
   LA
   RA
   '|'
   '^'
   '&'
   LS
   RS
   '~'
   '.'
   AR


Rules useless in grammar

   72 K: %empty

   73 P: %empty


Rules useless in parser due to conflicts

   62 expr: ID


State 13 conflicts: 1 shift/reduce
State 45 conflicts: 16 reduce/reduce
State 134 conflicts: 1 shift/reduce


Grammar

    0 $accept: prog $end

    1 prog: Mprog exts

    2 Mprog: %empty

    3 exts: exts func
    4     | exts decl
    5     | %empty

    6 func: MAIN '(' ')' Mmain block
    7     | ftype Margs args ')' block

    8 Mmain: %empty

    9 ftype: type ID '('

   10 Margs: %empty

   11 block: '{' decls stmts '}'

   12 decls: decls decl
   13      | %empty

   14 decl: list ';'

   15 type: VOID
   16     | INT
   17     | FLOAT
   18     | CHAR

   19 args: args ',' type ptr ID
   20     | type ptr ID

   21 list: list ',' ptr ID
   22     | type ptr ID

   23 ptr: %empty
   24    | '*'

   25 stmts: stmts stmt
   26      | %empty

   27 stmt: ';'
   28     | expr ';'
   29     | IF '(' expr ')' M stmt
   30     | IF '(' expr ')' M stmt ELSE N L stmt
   31     | WHILE '(' L expr ')' M stmt N
   32     | DO L stmt WHILE '(' expr ')' M N ';'
   33     | FOR '(' expr ';' L expr M N ';' L expr N ')' L stmt N
   34     | RETURN expr ';'
   35     | BREAK ';'
   36     | '{' stmts '}'
   37     | error ';'

   38 exprs: exprs ',' expr
   39      | expr

   40 expr: ID '=' expr
   41     | ID
   42     | expr OR expr
   43     | expr AN expr
   44     | expr EQ expr
   45     | expr NE expr
   46     | expr '<' expr
   47     | expr '>' expr
   48     | expr LE expr
   49     | expr GE expr
   50     | expr '+' expr
   51     | expr '-' expr
   52     | expr '*' expr
   53     | expr '/' expr
   54     | expr '%' expr
   55     | '!' expr
   56     | '(' expr ')'
   57     | '$' INT8
   58     | PP ID
   59     | NN ID
   60     | ID PP
   61     | ID NN
   62     | ID
   63     | INT8
   64     | INT16
   65     | INT32
   66     | FLT
   67     | STR
   68     | ID '(' exprs ')'

   69 L: %empty

   70 M: %empty

   71 N: %empty


Terminals, with rules where they appear

$end (0) 0
'!' (33) 55
'$' (36) 57
'%' (37) 54
'&' (38)
'(' (40) 6 9 29 30 31 32 33 56 68
')' (41) 6 7 29 30 31 32 33 56 68
'*' (42) 24 52
'+' (43) 50
',' (44) 19 21 38
'-' (45) 51
'.' (46)
'/' (47) 53
';' (59) 14 27 28 32 33 34 35 37
'<' (60) 46
'=' (61) 40
'>' (62) 47
'^' (94)
'{' (123) 11 36
'|' (124)
'}' (125) 11 36
'~' (126)
error (256) 37
ID (258) 9 19 20 21 22 40 41 58 59 60 61 62 68
INT8 (259) 57 63
INT16 (260) 64
INT32 (261) 65
FLT (262) 66
STR (263) 67
BREAK (264) 35
CHAR (265) 18
DO (266) 32
ELSE (267) 30
FLOAT (268) 17
FOR (269) 33
IF (270) 29 30
INT (271) 16
MAIN (272) 6
RETURN (273) 34
VOID (274) 15
WHILE (275) 31 32
PA (276)
NA (277)
TA (278)
DA (279)
MA (280)
AA (281)
XA (282)
OA (283)
LA (284)
RA (285)
OR (286) 42
AN (287) 43
EQ (288) 44
NE (289) 45
LE (290) 48
GE (291) 49
LS (292)
RS (293)
PP (294) 58 60
NN (295) 59 61
AR (296)


Nonterminals, with rules where they appear

$accept (63)
    on left: 0
prog (64)
    on left: 1, on right: 0
Mprog (65)
    on left: 2, on right: 1
exts (66)
    on left: 3 4 5, on right: 1 3 4
func (67)
    on left: 6 7, on right: 3
Mmain (68)
    on left: 8, on right: 6
ftype (69)
    on left: 9, on right: 7
Margs (70)
    on left: 10, on right: 7
block (71)
    on left: 11, on right: 6 7
decls (72)
    on left: 12 13, on right: 11 12
decl (73)
    on left: 14, on right: 4 12
type (74)
    on left: 15 16 17 18, on right: 9 19 20 22
args (75)
    on left: 19 20, on right: 7 19
list (76)
    on left: 21 22, on right: 14 21
ptr (77)
    on left: 23 24, on right: 19 20 21 22
stmts (78)
    on left: 25 26, on right: 11 25 36
stmt (79)
    on left: 27 28 29 30 31 32 33 34 35 36 37, on right: 25 29 30 31
    32 33
exprs (80)
    on left: 38 39, on right: 38 68
expr (81)
    on left: 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57
    58 59 60 61 62 63 64 65 66 67 68, on right: 28 29 30 31 32 33 34
    38 39 40 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56
L (82)
    on left: 69, on right: 30 31 32 33
M (83)
    on left: 70, on right: 29 30 31 32 33
N (84)
    on left: 71, on right: 30 31 32 33


State 0

    0 $accept: . prog $end

    $default  reduce using rule 2 (Mprog)

    prog   go to state 1
    Mprog  go to state 2


State 1

    0 $accept: prog . $end

    $end  shift, and go to state 3


State 2

    1 prog: Mprog . exts

    $default  reduce using rule 5 (exts)

    exts  go to state 4


State 3

    0 $accept: prog $end .

    $default  accept


State 4

    1 prog: Mprog exts .
    3 exts: exts . func
    4     | exts . decl

    CHAR   shift, and go to state 5
    FLOAT  shift, and go to state 6
    INT    shift, and go to state 7
    MAIN   shift, and go to state 8
    VOID   shift, and go to state 9

    $default  reduce using rule 1 (prog)

    func   go to state 10
    ftype  go to state 11
    decl   go to state 12
    type   go to state 13
    list   go to state 14


State 5

   18 type: CHAR .

    $default  reduce using rule 18 (type)


State 6

   17 type: FLOAT .

    $default  reduce using rule 17 (type)


State 7

   16 type: INT .

    $default  reduce using rule 16 (type)


State 8

    6 func: MAIN . '(' ')' Mmain block

    '('  shift, and go to state 15


State 9

   15 type: VOID .

    $default  reduce using rule 15 (type)


State 10

    3 exts: exts func .

    $default  reduce using rule 3 (exts)


State 11

    7 func: ftype . Margs args ')' block

    $default  reduce using rule 10 (Margs)

    Margs  go to state 16


State 12

    4 exts: exts decl .

    $default  reduce using rule 4 (exts)


State 13

    9 ftype: type . ID '('
   22 list: type . ptr ID

    ID   shift, and go to state 17
    '*'  shift, and go to state 18

    ID  [reduce using rule 23 (ptr)]

    ptr  go to state 19


State 14

   14 decl: list . ';'
   21 list: list . ',' ptr ID

    ';'  shift, and go to state 20
    ','  shift, and go to state 21


State 15

    6 func: MAIN '(' . ')' Mmain block

    ')'  shift, and go to state 22


State 16

    7 func: ftype Margs . args ')' block

    CHAR   shift, and go to state 5
    FLOAT  shift, and go to state 6
    INT    shift, and go to state 7
    VOID   shift, and go to state 9

    type  go to state 23
    args  go to state 24


State 17

    9 ftype: type ID . '('

    '('  shift, and go to state 25


State 18

   24 ptr: '*' .

    $default  reduce using rule 24 (ptr)


State 19

   22 list: type ptr . ID

    ID  shift, and go to state 26


State 20

   14 decl: list ';' .

    $default  reduce using rule 14 (decl)


State 21

   21 list: list ',' . ptr ID

    '*'  shift, and go to state 18

    $default  reduce using rule 23 (ptr)

    ptr  go to state 27


State 22

    6 func: MAIN '(' ')' . Mmain block

    $default  reduce using rule 8 (Mmain)

    Mmain  go to state 28


State 23

   20 args: type . ptr ID

    '*'  shift, and go to state 18

    $default  reduce using rule 23 (ptr)

    ptr  go to state 29


State 24

    7 func: ftype Margs args . ')' block
   19 args: args . ',' type ptr ID

    ')'  shift, and go to state 30
    ','  shift, and go to state 31


State 25

    9 ftype: type ID '(' .

    $default  reduce using rule 9 (ftype)


State 26

   22 list: type ptr ID .

    $default  reduce using rule 22 (list)


State 27

   21 list: list ',' ptr . ID

    ID  shift, and go to state 32


State 28

    6 func: MAIN '(' ')' Mmain . block

    '{'  shift, and go to state 33

    block  go to state 34


State 29

   20 args: type ptr . ID

    ID  shift, and go to state 35


State 30

    7 func: ftype Margs args ')' . block

    '{'  shift, and go to state 33

    block  go to state 36


State 31

   19 args: args ',' . type ptr ID

    CHAR   shift, and go to state 5
    FLOAT  shift, and go to state 6
    INT    shift, and go to state 7
    VOID   shift, and go to state 9

    type  go to state 37


State 32

   21 list: list ',' ptr ID .

    $default  reduce using rule 21 (list)


State 33

   11 block: '{' . decls stmts '}'

    $default  reduce using rule 13 (decls)

    decls  go to state 38


State 34

    6 func: MAIN '(' ')' Mmain block .

    $default  reduce using rule 6 (func)


State 35

   20 args: type ptr ID .

    $default  reduce using rule 20 (args)


State 36

    7 func: ftype Margs args ')' block .

    $default  reduce using rule 7 (func)


State 37

   19 args: args ',' type . ptr ID

    '*'  shift, and go to state 18

    $default  reduce using rule 23 (ptr)

    ptr  go to state 39


State 38

   11 block: '{' decls . stmts '}'
   12 decls: decls . decl

    CHAR   shift, and go to state 5
    FLOAT  shift, and go to state 6
    INT    shift, and go to state 7
    VOID   shift, and go to state 9

    $default  reduce using rule 26 (stmts)

    decl   go to state 40
    type   go to state 41
    list   go to state 14
    stmts  go to state 42


State 39

   19 args: args ',' type ptr . ID

    ID  shift, and go to state 43


State 40

   12 decls: decls decl .

    $default  reduce using rule 12 (decls)


State 41

   22 list: type . ptr ID

    '*'  shift, and go to state 18

    $default  reduce using rule 23 (ptr)

    ptr  go to state 19


State 42

   11 block: '{' decls stmts . '}'
   25 stmts: stmts . stmt

    error   shift, and go to state 44
    ID      shift, and go to state 45
    INT8    shift, and go to state 46
    INT16   shift, and go to state 47
    INT32   shift, and go to state 48
    FLT     shift, and go to state 49
    STR     shift, and go to state 50
    BREAK   shift, and go to state 51
    DO      shift, and go to state 52
    FOR     shift, and go to state 53
    IF      shift, and go to state 54
    RETURN  shift, and go to state 55
    WHILE   shift, and go to state 56
    '!'     shift, and go to state 57
    PP      shift, and go to state 58
    NN      shift, and go to state 59
    '('     shift, and go to state 60
    '{'     shift, and go to state 61
    '}'     shift, and go to state 62
    ';'     shift, and go to state 63
    '$'     shift, and go to state 64

    stmt  go to state 65
    expr  go to state 66


State 43

   19 args: args ',' type ptr ID .

    $default  reduce using rule 19 (args)


State 44

   37 stmt: error . ';'

    ';'  shift, and go to state 67


State 45

   40 expr: ID . '=' expr
   41     | ID .
   60     | ID . PP
   61     | ID . NN
   62     | ID .
   68     | ID . '(' exprs ')'

    '='  shift, and go to state 68
    PP   shift, and go to state 69
    NN   shift, and go to state 70
    '('  shift, and go to state 71

    OR        reduce using rule 41 (expr)
    OR        [reduce using rule 62 (expr)]
    AN        reduce using rule 41 (expr)
    AN        [reduce using rule 62 (expr)]
    EQ        reduce using rule 41 (expr)
    EQ        [reduce using rule 62 (expr)]
    NE        reduce using rule 41 (expr)
    NE        [reduce using rule 62 (expr)]
    LE        reduce using rule 41 (expr)
    LE        [reduce using rule 62 (expr)]
    '<'       reduce using rule 41 (expr)
    '<'       [reduce using rule 62 (expr)]
    GE        reduce using rule 41 (expr)
    GE        [reduce using rule 62 (expr)]
    '>'       reduce using rule 41 (expr)
    '>'       [reduce using rule 62 (expr)]
    '+'       reduce using rule 41 (expr)
    '+'       [reduce using rule 62 (expr)]
    '-'       reduce using rule 41 (expr)
    '-'       [reduce using rule 62 (expr)]
    '*'       reduce using rule 41 (expr)
    '*'       [reduce using rule 62 (expr)]
    '/'       reduce using rule 41 (expr)
    '/'       [reduce using rule 62 (expr)]
    '%'       reduce using rule 41 (expr)
    '%'       [reduce using rule 62 (expr)]
    ')'       reduce using rule 41 (expr)
    ')'       [reduce using rule 62 (expr)]
    ';'       reduce using rule 41 (expr)
    ';'       [reduce using rule 62 (expr)]
    ','       reduce using rule 41 (expr)
    ','       [reduce using rule 62 (expr)]
    $default  reduce using rule 41 (expr)


State 46

   63 expr: INT8 .

    $default  reduce using rule 63 (expr)


State 47

   64 expr: INT16 .

    $default  reduce using rule 64 (expr)


State 48

   65 expr: INT32 .

    $default  reduce using rule 65 (expr)


State 49

   66 expr: FLT .

    $default  reduce using rule 66 (expr)


State 50

   67 expr: STR .

    $default  reduce using rule 67 (expr)


State 51

   35 stmt: BREAK . ';'

    ';'  shift, and go to state 72


State 52

   32 stmt: DO . L stmt WHILE '(' expr ')' M N ';'

    $default  reduce using rule 69 (L)

    L  go to state 73


State 53

   33 stmt: FOR . '(' expr ';' L expr M N ';' L expr N ')' L stmt N

    '('  shift, and go to state 74


State 54

   29 stmt: IF . '(' expr ')' M stmt
   30     | IF . '(' expr ')' M stmt ELSE N L stmt

    '('  shift, and go to state 75


State 55

   34 stmt: RETURN . expr ';'

    ID     shift, and go to state 45
    INT8   shift, and go to state 46
    INT16  shift, and go to state 47
    INT32  shift, and go to state 48
    FLT    shift, and go to state 49
    STR    shift, and go to state 50
    '!'    shift, and go to state 57
    PP     shift, and go to state 58
    NN     shift, and go to state 59
    '('    shift, and go to state 60
    '$'    shift, and go to state 64

    expr  go to state 76


State 56

   31 stmt: WHILE . '(' L expr ')' M stmt N

    '('  shift, and go to state 77


State 57

   55 expr: '!' . expr

    ID     shift, and go to state 45
    INT8   shift, and go to state 46
    INT16  shift, and go to state 47
    INT32  shift, and go to state 48
    FLT    shift, and go to state 49
    STR    shift, and go to state 50
    '!'    shift, and go to state 57
    PP     shift, and go to state 58
    NN     shift, and go to state 59
    '('    shift, and go to state 60
    '$'    shift, and go to state 64

    expr  go to state 78


State 58

   58 expr: PP . ID

    ID  shift, and go to state 79


State 59

   59 expr: NN . ID

    ID  shift, and go to state 80


State 60

   56 expr: '(' . expr ')'

    ID     shift, and go to state 45
    INT8   shift, and go to state 46
    INT16  shift, and go to state 47
    INT32  shift, and go to state 48
    FLT    shift, and go to state 49
    STR    shift, and go to state 50
    '!'    shift, and go to state 57
    PP     shift, and go to state 58
    NN     shift, and go to state 59
    '('    shift, and go to state 60
    '$'    shift, and go to state 64

    expr  go to state 81


State 61

   36 stmt: '{' . stmts '}'

    $default  reduce using rule 26 (stmts)

    stmts  go to state 82


State 62

   11 block: '{' decls stmts '}' .

    $default  reduce using rule 11 (block)


State 63

   27 stmt: ';' .

    $default  reduce using rule 27 (stmt)


State 64

   57 expr: '$' . INT8

    INT8  shift, and go to state 83


State 65

   25 stmts: stmts stmt .

    $default  reduce using rule 25 (stmts)


State 66

   28 stmt: expr . ';'
   42 expr: expr . OR expr
   43     | expr . AN expr
   44     | expr . EQ expr
   45     | expr . NE expr
   46     | expr . '<' expr
   47     | expr . '>' expr
   48     | expr . LE expr
   49     | expr . GE expr
   50     | expr . '+' expr
   51     | expr . '-' expr
   52     | expr . '*' expr
   53     | expr . '/' expr
   54     | expr . '%' expr

    OR   shift, and go to state 84
    AN   shift, and go to state 85
    EQ   shift, and go to state 86
    NE   shift, and go to state 87
    LE   shift, and go to state 88
    '<'  shift, and go to state 89
    GE   shift, and go to state 90
    '>'  shift, and go to state 91
    '+'  shift, and go to state 92
    '-'  shift, and go to state 93
    '*'  shift, and go to state 94
    '/'  shift, and go to state 95
    '%'  shift, and go to state 96
    ';'  shift, and go to state 97


State 67

   37 stmt: error ';' .

    $default  reduce using rule 37 (stmt)


State 68

   40 expr: ID '=' . expr

    ID     shift, and go to state 45
    INT8   shift, and go to state 46
    INT16  shift, and go to state 47
    INT32  shift, and go to state 48
    FLT    shift, and go to state 49
    STR    shift, and go to state 50
    '!'    shift, and go to state 57
    PP     shift, and go to state 58
    NN     shift, and go to state 59
    '('    shift, and go to state 60
    '$'    shift, and go to state 64

    expr  go to state 98


State 69

   60 expr: ID PP .

    $default  reduce using rule 60 (expr)


State 70

   61 expr: ID NN .

    $default  reduce using rule 61 (expr)


State 71

   68 expr: ID '(' . exprs ')'

    ID     shift, and go to state 45
    INT8   shift, and go to state 46
    INT16  shift, and go to state 47
    INT32  shift, and go to state 48
    FLT    shift, and go to state 49
    STR    shift, and go to state 50
    '!'    shift, and go to state 57
    PP     shift, and go to state 58
    NN     shift, and go to state 59
    '('    shift, and go to state 60
    '$'    shift, and go to state 64

    exprs  go to state 99
    expr   go to state 100


State 72

   35 stmt: BREAK ';' .

    $default  reduce using rule 35 (stmt)


State 73

   32 stmt: DO L . stmt WHILE '(' expr ')' M N ';'

    error   shift, and go to state 44
    ID      shift, and go to state 45
    INT8    shift, and go to state 46
    INT16   shift, and go to state 47
    INT32   shift, and go to state 48
    FLT     shift, and go to state 49
    STR     shift, and go to state 50
    BREAK   shift, and go to state 51
    DO      shift, and go to state 52
    FOR     shift, and go to state 53
    IF      shift, and go to state 54
    RETURN  shift, and go to state 55
    WHILE   shift, and go to state 56
    '!'     shift, and go to state 57
    PP      shift, and go to state 58
    NN      shift, and go to state 59
    '('     shift, and go to state 60
    '{'     shift, and go to state 61
    ';'     shift, and go to state 63
    '$'     shift, and go to state 64

    stmt  go to state 101
    expr  go to state 66


State 74

   33 stmt: FOR '(' . expr ';' L expr M N ';' L expr N ')' L stmt N

    ID     shift, and go to state 45
    INT8   shift, and go to state 46
    INT16  shift, and go to state 47
    INT32  shift, and go to state 48
    FLT    shift, and go to state 49
    STR    shift, and go to state 50
    '!'    shift, and go to state 57
    PP     shift, and go to state 58
    NN     shift, and go to state 59
    '('    shift, and go to state 60
    '$'    shift, and go to state 64

    expr  go to state 102


State 75

   29 stmt: IF '(' . expr ')' M stmt
   30     | IF '(' . expr ')' M stmt ELSE N L stmt

    ID     shift, and go to state 45
    INT8   shift, and go to state 46
    INT16  shift, and go to state 47
    INT32  shift, and go to state 48
    FLT    shift, and go to state 49
    STR    shift, and go to state 50
    '!'    shift, and go to state 57
    PP     shift, and go to state 58
    NN     shift, and go to state 59
    '('    shift, and go to state 60
    '$'    shift, and go to state 64

    expr  go to state 103


State 76

   34 stmt: RETURN expr . ';'
   42 expr: expr . OR expr
   43     | expr . AN expr
   44     | expr . EQ expr
   45     | expr . NE expr
   46     | expr . '<' expr
   47     | expr . '>' expr
   48     | expr . LE expr
   49     | expr . GE expr
   50     | expr . '+' expr
   51     | expr . '-' expr
   52     | expr . '*' expr
   53     | expr . '/' expr
   54     | expr . '%' expr

    OR   shift, and go to state 84
    AN   shift, and go to state 85
    EQ   shift, and go to state 86
    NE   shift, and go to state 87
    LE   shift, and go to state 88
    '<'  shift, and go to state 89
    GE   shift, and go to state 90
    '>'  shift, and go to state 91
    '+'  shift, and go to state 92
    '-'  shift, and go to state 93
    '*'  shift, and go to state 94
    '/'  shift, and go to state 95
    '%'  shift, and go to state 96
    ';'  shift, and go to state 104


State 77

   31 stmt: WHILE '(' . L expr ')' M stmt N

    $default  reduce using rule 69 (L)

    L  go to state 105


State 78

   42 expr: expr . OR expr
   43     | expr . AN expr
   44     | expr . EQ expr
   45     | expr . NE expr
   46     | expr . '<' expr
   47     | expr . '>' expr
   48     | expr . LE expr
   49     | expr . GE expr
   50     | expr . '+' expr
   51     | expr . '-' expr
   52     | expr . '*' expr
   53     | expr . '/' expr
   54     | expr . '%' expr
   55     | '!' expr .

    $default  reduce using rule 55 (expr)


State 79

   58 expr: PP ID .

    $default  reduce using rule 58 (expr)


State 80

   59 expr: NN ID .

    $default  reduce using rule 59 (expr)


State 81

   42 expr: expr . OR expr
   43     | expr . AN expr
   44     | expr . EQ expr
   45     | expr . NE expr
   46     | expr . '<' expr
   47     | expr . '>' expr
   48     | expr . LE expr
   49     | expr . GE expr
   50     | expr . '+' expr
   51     | expr . '-' expr
   52     | expr . '*' expr
   53     | expr . '/' expr
   54     | expr . '%' expr
   56     | '(' expr . ')'

    OR   shift, and go to state 84
    AN   shift, and go to state 85
    EQ   shift, and go to state 86
    NE   shift, and go to state 87
    LE   shift, and go to state 88
    '<'  shift, and go to state 89
    GE   shift, and go to state 90
    '>'  shift, and go to state 91
    '+'  shift, and go to state 92
    '-'  shift, and go to state 93
    '*'  shift, and go to state 94
    '/'  shift, and go to state 95
    '%'  shift, and go to state 96
    ')'  shift, and go to state 106


State 82

   25 stmts: stmts . stmt
   36 stmt: '{' stmts . '}'

    error   shift, and go to state 44
    ID      shift, and go to state 45
    INT8    shift, and go to state 46
    INT16   shift, and go to state 47
    INT32   shift, and go to state 48
    FLT     shift, and go to state 49
    STR     shift, and go to state 50
    BREAK   shift, and go to state 51
    DO      shift, and go to state 52
    FOR     shift, and go to state 53
    IF      shift, and go to state 54
    RETURN  shift, and go to state 55
    WHILE   shift, and go to state 56
    '!'     shift, and go to state 57
    PP      shift, and go to state 58
    NN      shift, and go to state 59
    '('     shift, and go to state 60
    '{'     shift, and go to state 61
    '}'     shift, and go to state 107
    ';'     shift, and go to state 63
    '$'     shift, and go to state 64

    stmt  go to state 65
    expr  go to state 66


State 83

   57 expr: '$' INT8 .

    $default  reduce using rule 57 (expr)


State 84

   42 expr: expr OR . expr

    ID     shift, and go to state 45
    INT8   shift, and go to state 46
    INT16  shift, and go to state 47
    INT32  shift, and go to state 48
    FLT    shift, and go to state 49
    STR    shift, and go to state 50
    '!'    shift, and go to state 57
    PP     shift, and go to state 58
    NN     shift, and go to state 59
    '('    shift, and go to state 60
    '$'    shift, and go to state 64

    expr  go to state 108


State 85

   43 expr: expr AN . expr

    ID     shift, and go to state 45
    INT8   shift, and go to state 46
    INT16  shift, and go to state 47
    INT32  shift, and go to state 48
    FLT    shift, and go to state 49
    STR    shift, and go to state 50
    '!'    shift, and go to state 57
    PP     shift, and go to state 58
    NN     shift, and go to state 59
    '('    shift, and go to state 60
    '$'    shift, and go to state 64

    expr  go to state 109


State 86

   44 expr: expr EQ . expr

    ID     shift, and go to state 45
    INT8   shift, and go to state 46
    INT16  shift, and go to state 47
    INT32  shift, and go to state 48
    FLT    shift, and go to state 49
    STR    shift, and go to state 50
    '!'    shift, and go to state 57
    PP     shift, and go to state 58
    NN     shift, and go to state 59
    '('    shift, and go to state 60
    '$'    shift, and go to state 64

    expr  go to state 110


State 87

   45 expr: expr NE . expr

    ID     shift, and go to state 45
    INT8   shift, and go to state 46
    INT16  shift, and go to state 47
    INT32  shift, and go to state 48
    FLT    shift, and go to state 49
    STR    shift, and go to state 50
    '!'    shift, and go to state 57
    PP     shift, and go to state 58
    NN     shift, and go to state 59
    '('    shift, and go to state 60
    '$'    shift, and go to state 64

    expr  go to state 111


State 88

   48 expr: expr LE . expr

    ID     shift, and go to state 45
    INT8   shift, and go to state 46
    INT16  shift, and go to state 47
    INT32  shift, and go to state 48
    FLT    shift, and go to state 49
    STR    shift, and go to state 50
    '!'    shift, and go to state 57
    PP     shift, and go to state 58
    NN     shift, and go to state 59
    '('    shift, and go to state 60
    '$'    shift, and go to state 64

    expr  go to state 112


State 89

   46 expr: expr '<' . expr

    ID     shift, and go to state 45
    INT8   shift, and go to state 46
    INT16  shift, and go to state 47
    INT32  shift, and go to state 48
    FLT    shift, and go to state 49
    STR    shift, and go to state 50
    '!'    shift, and go to state 57
    PP     shift, and go to state 58
    NN     shift, and go to state 59
    '('    shift, and go to state 60
    '$'    shift, and go to state 64

    expr  go to state 113


State 90

   49 expr: expr GE . expr

    ID     shift, and go to state 45
    INT8   shift, and go to state 46
    INT16  shift, and go to state 47
    INT32  shift, and go to state 48
    FLT    shift, and go to state 49
    STR    shift, and go to state 50
    '!'    shift, and go to state 57
    PP     shift, and go to state 58
    NN     shift, and go to state 59
    '('    shift, and go to state 60
    '$'    shift, and go to state 64

    expr  go to state 114


State 91

   47 expr: expr '>' . expr

    ID     shift, and go to state 45
    INT8   shift, and go to state 46
    INT16  shift, and go to state 47
    INT32  shift, and go to state 48
    FLT    shift, and go to state 49
    STR    shift, and go to state 50
    '!'    shift, and go to state 57
    PP     shift, and go to state 58
    NN     shift, and go to state 59
    '('    shift, and go to state 60
    '$'    shift, and go to state 64

    expr  go to state 115


State 92

   50 expr: expr '+' . expr

    ID     shift, and go to state 45
    INT8   shift, and go to state 46
    INT16  shift, and go to state 47
    INT32  shift, and go to state 48
    FLT    shift, and go to state 49
    STR    shift, and go to state 50
    '!'    shift, and go to state 57
    PP     shift, and go to state 58
    NN     shift, and go to state 59
    '('    shift, and go to state 60
    '$'    shift, and go to state 64

    expr  go to state 116


State 93

   51 expr: expr '-' . expr

    ID     shift, and go to state 45
    INT8   shift, and go to state 46
    INT16  shift, and go to state 47
    INT32  shift, and go to state 48
    FLT    shift, and go to state 49
    STR    shift, and go to state 50
    '!'    shift, and go to state 57
    PP     shift, and go to state 58
    NN     shift, and go to state 59
    '('    shift, and go to state 60
    '$'    shift, and go to state 64

    expr  go to state 117


State 94

   52 expr: expr '*' . expr

    ID     shift, and go to state 45
    INT8   shift, and go to state 46
    INT16  shift, and go to state 47
    INT32  shift, and go to state 48
    FLT    shift, and go to state 49
    STR    shift, and go to state 50
    '!'    shift, and go to state 57
    PP     shift, and go to state 58
    NN     shift, and go to state 59
    '('    shift, and go to state 60
    '$'    shift, and go to state 64

    expr  go to state 118


State 95

   53 expr: expr '/' . expr

    ID     shift, and go to state 45
    INT8   shift, and go to state 46
    INT16  shift, and go to state 47
    INT32  shift, and go to state 48
    FLT    shift, and go to state 49
    STR    shift, and go to state 50
    '!'    shift, and go to state 57
    PP     shift, and go to state 58
    NN     shift, and go to state 59
    '('    shift, and go to state 60
    '$'    shift, and go to state 64

    expr  go to state 119


State 96

   54 expr: expr '%' . expr

    ID     shift, and go to state 45
    INT8   shift, and go to state 46
    INT16  shift, and go to state 47
    INT32  shift, and go to state 48
    FLT    shift, and go to state 49
    STR    shift, and go to state 50
    '!'    shift, and go to state 57
    PP     shift, and go to state 58
    NN     shift, and go to state 59
    '('    shift, and go to state 60
    '$'    shift, and go to state 64

    expr  go to state 120


State 97

   28 stmt: expr ';' .

    $default  reduce using rule 28 (stmt)


State 98

   40 expr: ID '=' expr .
   42     | expr . OR expr
   43     | expr . AN expr
   44     | expr . EQ expr
   45     | expr . NE expr
   46     | expr . '<' expr
   47     | expr . '>' expr
   48     | expr . LE expr
   49     | expr . GE expr
   50     | expr . '+' expr
   51     | expr . '-' expr
   52     | expr . '*' expr
   53     | expr . '/' expr
   54     | expr . '%' expr

    OR   shift, and go to state 84
    AN   shift, and go to state 85
    EQ   shift, and go to state 86
    NE   shift, and go to state 87
    LE   shift, and go to state 88
    '<'  shift, and go to state 89
    GE   shift, and go to state 90
    '>'  shift, and go to state 91
    '+'  shift, and go to state 92
    '-'  shift, and go to state 93
    '*'  shift, and go to state 94
    '/'  shift, and go to state 95
    '%'  shift, and go to state 96

    $default  reduce using rule 40 (expr)


State 99

   38 exprs: exprs . ',' expr
   68 expr: ID '(' exprs . ')'

    ')'  shift, and go to state 121
    ','  shift, and go to state 122


State 100

   39 exprs: expr .
   42 expr: expr . OR expr
   43     | expr . AN expr
   44     | expr . EQ expr
   45     | expr . NE expr
   46     | expr . '<' expr
   47     | expr . '>' expr
   48     | expr . LE expr
   49     | expr . GE expr
   50     | expr . '+' expr
   51     | expr . '-' expr
   52     | expr . '*' expr
   53     | expr . '/' expr
   54     | expr . '%' expr

    OR   shift, and go to state 84
    AN   shift, and go to state 85
    EQ   shift, and go to state 86
    NE   shift, and go to state 87
    LE   shift, and go to state 88
    '<'  shift, and go to state 89
    GE   shift, and go to state 90
    '>'  shift, and go to state 91
    '+'  shift, and go to state 92
    '-'  shift, and go to state 93
    '*'  shift, and go to state 94
    '/'  shift, and go to state 95
    '%'  shift, and go to state 96

    $default  reduce using rule 39 (exprs)


State 101

   32 stmt: DO L stmt . WHILE '(' expr ')' M N ';'

    WHILE  shift, and go to state 123


State 102

   33 stmt: FOR '(' expr . ';' L expr M N ';' L expr N ')' L stmt N
   42 expr: expr . OR expr
   43     | expr . AN expr
   44     | expr . EQ expr
   45     | expr . NE expr
   46     | expr . '<' expr
   47     | expr . '>' expr
   48     | expr . LE expr
   49     | expr . GE expr
   50     | expr . '+' expr
   51     | expr . '-' expr
   52     | expr . '*' expr
   53     | expr . '/' expr
   54     | expr . '%' expr

    OR   shift, and go to state 84
    AN   shift, and go to state 85
    EQ   shift, and go to state 86
    NE   shift, and go to state 87
    LE   shift, and go to state 88
    '<'  shift, and go to state 89
    GE   shift, and go to state 90
    '>'  shift, and go to state 91
    '+'  shift, and go to state 92
    '-'  shift, and go to state 93
    '*'  shift, and go to state 94
    '/'  shift, and go to state 95
    '%'  shift, and go to state 96
    ';'  shift, and go to state 124


State 103

   29 stmt: IF '(' expr . ')' M stmt
   30     | IF '(' expr . ')' M stmt ELSE N L stmt
   42 expr: expr . OR expr
   43     | expr . AN expr
   44     | expr . EQ expr
   45     | expr . NE expr
   46     | expr . '<' expr
   47     | expr . '>' expr
   48     | expr . LE expr
   49     | expr . GE expr
   50     | expr . '+' expr
   51     | expr . '-' expr
   52     | expr . '*' expr
   53     | expr . '/' expr
   54     | expr . '%' expr

    OR   shift, and go to state 84
    AN   shift, and go to state 85
    EQ   shift, and go to state 86
    NE   shift, and go to state 87
    LE   shift, and go to state 88
    '<'  shift, and go to state 89
    GE   shift, and go to state 90
    '>'  shift, and go to state 91
    '+'  shift, and go to state 92
    '-'  shift, and go to state 93
    '*'  shift, and go to state 94
    '/'  shift, and go to state 95
    '%'  shift, and go to state 96
    ')'  shift, and go to state 125


State 104

   34 stmt: RETURN expr ';' .

    $default  reduce using rule 34 (stmt)


State 105

   31 stmt: WHILE '(' L . expr ')' M stmt N
